2008-05-09  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c:
          Add some reasons/unreasons in get_headers_operation, to avoid
          getting a 0 account when we are replacing the headers in the
          gtk list store model. This should avoid some very hidden
          crashes.

2008-05-06  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-certdb-cst.c
        Fix some leaks in CST certificate manager support.

	* libtinymail-camel/tny-camel-folder.c:
        Reason the camel folder while we're getting its size and count,
	avoiding some crashes.

	* libtinymail-camel/camel-lite/camel/camel-tcp-stream-ssl.c:
        Protect PR_Reads and writes to avoid calls to PR_Close before one of
	them. Should avoid some crashes and bad memory accesses.

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.[ch]:
        Now references to current_folder, old_folder and last_folder
        are weak references. This way, when they're finalized we
        properly remove the store reference to them.
        Removed some small leaks and compilation warnings.

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store-priv.h:
        Added. Includes internal declarations of weak reference handlers
        for folders in the imap store.

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-command.c,
	libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
        Use weak references to folders in accesses to store.

2008-04-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Enlarged a lock for the transport-account in camel

2008-04-30  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c:
	(on_added): place correctly two swapped parameters when calling the
	user callback

2008-04-29  Philip Van Hoof <pvanhoof@gnome.org>

	* Extra robustness in TnyCamelSendQueue

2008-04-29  Jose Dapena Paz  <jdapena@igalia.com>
