@@ -1,3 +1,10 @@
+2008-05-12  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-camel/tny-camel-send-queue.c: Add camel folder reason to
+	sentbox and outbox while sending, as we can get unreasons and have
+	then crash because the message cache is freed. (Based on a previous
+	patch by Dape)
+
 2008-05-09  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c:
